--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,9 @@
+
+* {
+  box-sizing: border-box;
+  border-color: aqua;
+  border: 1px solid black;
+}
 body {
   background-color: rgb(0, 0, 0);
   font-family: Arial, Helvetica, sans-serif;
@@ -39,22 +45,4 @@ body {
     display: block;
     margin-bottom: 10px;
   }
-}
-
-
-/* Estilos responsivos para a classe "exercicio" */
-@media screen and (max-width: 768px) {
-  .exercicio {
-    padding: 5%;
-  }
-}
-
-.button-link {
-  display: inline-block;
-  padding: 10px;
-  background-color: transparent;
-  border: 1px;
-  color: rgb(66, 97, 101);
-  text-decoration: underline;
-  cursor: pointer;
 }
